--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <html>
 
 <head>
+	<title>My personal website</title>
+	<script type="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-with-addons.js"></script>
+	<script type="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
+
+	<script type="scripts/index.js"></script>
+
+	<link rel="stylesheet" type="text/css" href="styles/index.css">
 </head>
 
 <body>
 <h1>The Website of Sitong</h1>
+
+<div id="root"></div>
 </body>
 
 </html>
